// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> component render 1`] = `
<button
  className="btnFlat btnMd btnDefault"
  onClick={[Function]}
>
  
</button>
`;

exports[`<Board /> component render 2`] = `
<button
  className="btnFlat btnMd btnDefault"
  onClick={[Function]}
>
  
</button>
`;

exports[`<Board /> component render 3`] = `
<button
  className="btnFlat btnMd btnDefault"
  onClick={[Function]}
>
  <span>
    test
  </span>
</button>
`;
